Bluewolf SFMTA/src/objects/MTA_IT__c.object
<CustomObject>
    <description>Object for MTA IT to track projects</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>-self-</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bid D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr. Veatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juergens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sean Kelly Osterday esq.</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Project_Name__c</fullName>
        <label>Case Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Picklist_Declarative__c</fullName>
        <label>Picklist Declarative</label>
        <picklist>
            <picklistValues>
                <fullName>V - Page layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V - Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V - Permission Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V - OWD Sharing Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M - Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M - Validation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - WorkFlow - Process Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>Bike Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color Curb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Muni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gov&apos;t Affairs - Janet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kristin Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donovan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gretchen Rude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSC_Shanna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contested_Tow_Julie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Location_or_Sandbox__c</fullName>
        <label>SFDC Location or Sandbox</label>
        <picklist>
            <picklistValues>
                <fullName>App - Outside Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB BWDEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commuter Shuttle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FreeMuni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB Juergen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SB Sean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB SFMTADev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB Veatch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned_InBuild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done / Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Handoff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>1-line description of task</description>
        <label>Subject</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Do_List__c</fullName>
        <label>To Do List</label>
        <length>1055</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X30000_Type__c</fullName>
        <label>30000 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M - Meta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V - User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Logic Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MTA IT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>IT_Project_Name__c</columns>
        <columns>To_Do_List__c</columns>
        <columns>Status__c</columns>
        <columns>Picklist_Declarative__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assignment_Test_Queue_MTA_IT</fullName>
        <filterScope>Queue</filterScope>
        <label>Assignment Test Queue</label>
        <queue>Assignment_Test_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000}-{MM}{YY}</displayFormat>
        <label>MTA IT #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTA IT Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>